# ittapi

./: .buildinfo  CMakeLists.txt  README.md  buildall.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/src/: api-support.doctree  build.doctree  compile-and-link-with-itt-api.doctree  instrument-your-application.doctree  itt-api-cpp-wrapper.doctree  itt-api-reference.doctree  itt-api-support.doctree  jit-api-reference.doctree  jit-api-support.doctree  minimize-itt-api-overhead.doctree  overview.doctree  ref_collector.doctree  using-jit-api.doctree
.doctrees/src/ittapi/: clock-domain-api.doctree  collection-control-api.doctree  context-metadata-api.doctree  counter-api.doctree  domain-api.doctree  event-api.doctree  formatted-metadata-api.doctree  frame-api.doctree  histogram-api.doctree  load-module-api.doctree  marker-api.doctree  memory-allocation-apis.doctree  metadata-api.doctree  relation-api.doctree  string-handle-api.doctree  task-api.doctree  thread-naming-api.doctree  user-defined-synchronization-api.doctree
.doctrees/src/jitapi/: ijit_-getnewmethodid.doctree  ijit_isprofilingactive.doctree  ijit_notifyevent.doctree
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml  release.yml
_sources/src/: api-support.rst.txt
cpp/: CMakeLists.txt  README.md
cpp/include/: ittapi.hpp  ittapi_collection_control.hpp  ittapi_domain.hpp  ittapi_frame.hpp  ittapi_region.hpp  ittapi_string_handle.hpp  ittapi_task.hpp  ittapi_thread_naming.hpp  ittapi_utils.hpp
cpp/samples/: task_sample.cpp
cpp/tests/: test_collection_control.cpp  test_domain.cpp  test_frame.cpp  test_helpers.hpp  test_ittapi.cpp  test_region.cpp  test_string_handle.cpp  test_task.cpp  test_thread_naming.cpp
docs/: conf.py
docs/src/: itt-api-cpp-wrapper.rst
src/: api-support.html  build.html  compile-and-link-with-itt-api.html  instrument-your-application.html  itt-api-cpp-wrapper.html  itt-api-reference.html  itt-api-support.html  jit-api-reference.html  jit-api-support.html  minimize-itt-api-overhead.html  overview.html  ref_collector.html  using-jit-api.html
src/ittapi/: clock-domain-api.html  collection-control-api.html  context-metadata-api.html  counter-api.html  domain-api.html  event-api.html  formatted-metadata-api.html  frame-api.html  histogram-api.html  load-module-api.html  marker-api.html  memory-allocation-apis.html  metadata-api.html  relation-api.html  string-handle-api.html  task-api.html  thread-naming-api.html  user-defined-synchronization-api.html
src/jitapi/: ijit_-getnewmethodid.html  ijit_isprofilingactive.html  ijit_notifyevent.html
tests/: CMakeLists.txt  README.md
tests/framework/: itt_test_framework.hpp  itt_test_utils.hpp
tests/scripts/: run_tests.py
tests/src/: test_collection_control.cpp  test_counter.cpp  test_domain.cpp  test_event.cpp  test_frame.cpp  test_metadata.cpp  test_string_handle.cpp  test_task.cpp  test_thread_naming.cpp
